testsuite/tests/properties/invalid_block_expr/missing_expr/test.lkt
from common import FooNode

class Example: FooNode {
    @exported fun p(): Bool = {
        val _ = true;
    }
}
